<resources>
    <!--general default values -->
    <string name="app_name">Aries Messenger</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">NotSet</string>
    <string name="nav_header_subtitle">NotSet</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!-- nav header in main activity-->
    <string name="menu_profile">Profile</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_feedback">Feedback</string>
    <string name="menu_connections">Your Connections</string>
    <string name="menu_logout">Log Out</string>

    <!-- Edit bio activity-->
    <string name="edit_bio_hint">Write a good bio for yourself</string>
    <string name="edit_bio_but_change">Change</string>

    <!--Edit displayname activity -->
    <string name="edit_disp_hint">What \'s your new display name?</string>
    <string name="edit_disp_hint2">Your contacts will see you primary with this name.</string>

    <!-- Profile activity -->
    <string name="connection_number">Connections • %1$s</string>

    <!-- Blocked Activity -->
    <string name="blocked_disc">This is the list of the people you blocked on Aries.  &lt;br&gt; Keep in mind that blocked people will not see your account on Aries and cannot connect to you until you unblock them.</string>

    <string name="title_activity_main">Aries Messenger</string>

    <!-- Feedback Activity -->
    <string name="feedback_note">Aries is still in its early development, so a lot of bugs will rise.  &lt;br/&gt; Please leave a feedback for the developers to let them know.  &lt;br/&gt; If the app is crashing and you can not access this page then contact "debbech.ahmed@gmail.com".</string>

    <!-- activity titles -->
    <string name="title_activity_edit_disp_name">Edit Display Name</string>
    <string name="title_activity_edit_bio">Edit Bio</string>
    <string name="title_activity_blocked">Blocked Connections</string>
    <string name="title_activity_feedback">Leave a feedback</string>

    <!--button texts -->
    <string name="add_button">Connect</string>
    <string name="remove_button">Disconnect</string>
    <string name="waiting_button">Waiting</string>
    <string name="pending_button">Pending</string>
    <string name="accept_button">Accept</string>
    <string name="wait_label">Wait...</string>
    <string name="refuse_button">Refuse</string>
    <string name="but_edit_disp_name">Edit Display Name</string>
    <string name="but_edit_bio">Edit Bio</string>
    <string name="msg_edit">Edit</string>
    <string name="msg_cancel">Cancel</string>
    <string name="blocked_item">Unblock</string>
    <string name="block_text">Block</string>

    <!--messages popups -->
    <string name="no_res_msg">No Results!</string>
    <string name="no_new_requests">No new requests.</string>
    <string name="type_msg">Write your message...</string>
    <string name="replying_to">Replying to:</string>
    <string name="whos_typing"> is typing...</string>
    <string name="online_status">Online</string>
    <string name="offline_status">Not Online</string>
    <string name="refresh_button">Refresh</string>
    <string name="title_search_activity">Search for friends</string>
    <string name="menu_blocked">Blocked</string>

    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="text_register1">It seems that you are new to Aries.</string>
    <string name="text_register2">Register for free!</string>
    <string name="hint_username">Username</string>
    <string name="hint_displayname">Display Name</string>
    <string name="proceed_button">Create your new Account!</string>
    <string name="title_activity_about">About</string>
    <string name="menu_request">Pending Requests</string>
</resources>