<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/connections_nav"
            android:icon="@drawable/ic_your_connections"
            android:title="@string/menu_connections" />
        <!--<item
            android:id="@+id/settings_nav"
            android:icon="@drawable/ic_settings"
            android:title="@string/menu_settings" />-->
        <item
            android:id="@+id/profile_nav"
            android:icon="@drawable/ic_profile"
            android:title="@string/menu_profile" />
        <item
            android:id="@+id/blocked_nav"
            android:icon="@drawable/ic_baseline_person_off_24"
            android:title="@string/menu_blocked" />
        <item
            android:id="@+id/feedback_nav"
            android:icon="@drawable/ic_baseline_feedback_24"
            android:title="@string/menu_feedback" />
        <item
            android:id="@+id/requests_nav"
            android:icon="@drawable/ic_people_nav_24"
            android:title="@string/menu_request" />
    </group>
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/logout_nav"
            android:icon="@drawable/ic_logout"
            android:title="@string/menu_logout" />
    </group>
</menu>